client/src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-raleway: var(--font-raleway);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0C0C0D;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  font: var(--font-raleway);
  display: flex;
  width: 100%;
  overflow-x: hidden;
  height: max-content;
  flex-direction: column;
  justify-content: space-between;
  gap: 80px;
  margin-top: 30px;
  margin-bottom: 100px;
}

